--- a/src/app/components/VisualGridDeviceOrientations/style.css
+++ b/src/app/components/VisualGridDeviceOrientations/style.css
@@ -1,8 +1,3 @@
-.selections {
-  max-height: 310px;
-  overflow-y: scroll;
-}
-
 .selections + .btn.confirm {
   float: right;
   margin: 12px -7px !important;
